# VaKiOS64

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  build.sh  qemu.sh
kernel/: Makefile
kernel/include/drivers/: keyboard.h
kernel/include/memory/: gdt.h  idt.h  memory.h  paging.h  pic.h  pit.h
kernel/include/sys/: stdio.h
kernel/include/tty/: tty.h  vga.h
kernel/src/arch/: kernel.c  make.config
kernel/src/arch/boot/: multiboot.asm
kernel/src/arch/drivers/: keyboard.c
kernel/src/arch/linker/: link.ld
kernel/src/arch/memory/: exceptions.c  gdt.c  idt.c  malloc.c  memory.c  paging.c  pic.c  pit.c
kernel/src/arch/sys/: stdio.c
kernel/src/arch/vga/: tty.c  vga.c
